--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,31 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
+		<!-- Spring Web for REST API -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+	 
+		<!-- MySQL Connector -->
+		<dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-data-mongodb</artifactId>
+       </dependency>
+		<!-- H2 Database (for development/testing) -->
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
+		<!-- Spring Kafka -->
+		<dependency>
+			<groupId>org.springframework.kafka</groupId>
+			<artifactId>spring-kafka</artifactId>
+		</dependency>
+
 		<!-- Kafka Streams 3.x managed by Spring Boot 3.4.1 BOM -->
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
@@ -41,7 +66,6 @@
 			<artifactId>kafka-clients</artifactId>
 			<version>4.0.0</version>
 		</dependency>
-
 
 		<!-- Jackson Databind, version managed by Spring Boot -->
 		<dependency>
@@ -71,6 +95,14 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+				<configuration>
+					<excludes>
+						<exclude>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+						</exclude>
+					</excludes>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
