--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=consumer
+
+# MongoDB Configuration
+spring.data.mongodb.uri=mongodb://devina:devina4@localhost:27017/tradeIngestion?authSource=admin
+spring.data.mongodb.auto-index-creation=true
+
+# Kafka Configuration for historical data
+spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
+spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
