--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,19 @@
 spring.application.name=consumer
 
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://devina:devina4@localhost:27017/tradeIngestion?authSource=admin
+spring.data.mongodb.uri=mongodb://localhost:27017/tradeIngestion
 spring.data.mongodb.auto-index-creation=true
 
 # Kafka Configuration for historical data
+spring.kafka.bootstrap-servers=172.31.0.121:9092
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
+
+# Kafka Streams Configuration
+spring.kafka.streams.application-id=tickdata-to-candlestick-app
+spring.kafka.streams.bootstrap-servers=172.31.0.121:9092
+spring.kafka.streams.client-id=streamingcandle
+spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
+spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.support.serializer.JsonSerde
+spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer.model
+spring.kafka.streams.state-dir=/tmp/kafka-streams-state
