--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,5 @@ spring.kafka.streams.client-id=streamingcandle
 spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
 spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.support.serializer.JsonSerde
 spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer.model
+spring.kafka.streams.properties.auto.offset.reset=earliest
 spring.kafka.streams.state-dir=/tmp/kafka-streams-state
