--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=consumer
 
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/tradeIngestion
+spring.data.mongodb.uri=mongodb://devina:devina4@localhost:27017/tradeIngestion?authSource=admin
 spring.data.mongodb.auto-index-creation=true
 
 # Kafka Configuration for historical data
