--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,12 +10,24 @@ spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
-# Kafka Streams Configuration
-spring.kafka.streams.application-id=tickdata-to-candlestick-app
+# Kafka Streams Configuration - PRODUCTION FIXES
+spring.kafka.streams.application-id=candle-processor-ticktooneminprocessor
 spring.kafka.streams.bootstrap-servers=172.31.0.121:9092
 spring.kafka.streams.client-id=streamingcandle
 spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
 spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.support.serializer.JsonSerde
 spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer.model
 spring.kafka.streams.properties.auto.offset.reset=earliest
-spring.kafka.streams.state-dir=/tmp/kafka-streams-state
+
+# CRITICAL FIX: Use unique state directory path with application name and instance ID
+spring.kafka.streams.state-dir=/var/lib/kafka-streams/${spring.application.name}
+
+# Production reliability configurations
+spring.kafka.streams.properties.processing.guarantee=exactly_once_v2
+spring.kafka.streams.properties.commit.interval.ms=1000
+spring.kafka.streams.properties.statestore.cache.max.bytes=10485760
+spring.kafka.streams.properties.session.timeout.ms=30000
+spring.kafka.streams.properties.heartbeat.interval.ms=3000
+spring.kafka.streams.properties.request.timeout.ms=40000
+spring.kafka.streams.properties.retry.backoff.ms=100
+spring.kafka.streams.properties.reconnect.backoff.ms=50
