--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 spring.application.name=consumer
 
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://devina:devina4@localhost:27017/tradeIngestion?authSource=admin
+spring.data.mongodb.uri=mongodb://devina:devina4@172.31.12.118:27017/tradeIngestion?authSource=admin
 spring.data.mongodb.auto-index-creation=true
 
 # Kafka Configuration for historical data
-spring.kafka.bootstrap-servers=172.31.0.121:9092
+spring.kafka.bootstrap-servers=172.31.12.118:9092
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
 # Kafka Streams Configuration - PRODUCTION FIXES
 spring.kafka.streams.application-id=candle-processor-ticktooneminprocessor
-spring.kafka.streams.bootstrap-servers=172.31.0.121:9092
+spring.kafka.streams.bootstrap-servers=172.31.12.118:9092
 spring.kafka.streams.client-id=streamingcandle
 spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
 spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.support.serializer.JsonSerde
