--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,14 @@ spring.data.mongodb.auto-index-creation=true
 # Kafka Configuration for historical data
 spring.kafka.bootstrap-servers=172.31.12.118:9092
 spring.kafka.consumer.auto-offset-reset=earliest
+
+# FIXED: Add missing consumer deserializer configuration
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=com.kotsin.consumer.model
+spring.kafka.consumer.properties.spring.json.value.default.type=com.kotsin.consumer.model.TickData
+
+# Producer configuration
 spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.StringSerializer
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonSerializer
 
