--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,10 +32,15 @@ spring.kafka.streams.state-dir=/var/lib/kafka-streams/${spring.application.name}
 
 # Production reliability configurations
 spring.kafka.streams.properties.processing.guarantee=exactly_once_v2
-spring.kafka.streams.properties.commit.interval.ms=1000
+spring.kafka.streams.properties.commit.interval.ms=100
 spring.kafka.streams.properties.statestore.cache.max.bytes=10485760
 spring.kafka.streams.properties.session.timeout.ms=30000
 spring.kafka.streams.properties.heartbeat.interval.ms=3000
 spring.kafka.streams.properties.request.timeout.ms=40000
 spring.kafka.streams.properties.retry.backoff.ms=100
 spring.kafka.streams.properties.reconnect.backoff.ms=50
+
+# REAL-TIME OPTIMIZATION: Low latency configurations
+spring.kafka.streams.properties.linger.ms=5
+spring.kafka.streams.properties.batch.size=1024
+spring.kafka.streams.properties.buffer.memory=33554432
