--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,3 +44,5 @@ spring.kafka.streams.properties.reconnect.backoff.ms=50
 spring.kafka.streams.properties.linger.ms=5
 spring.kafka.streams.properties.batch.size=1024
 spring.kafka.streams.properties.buffer.memory=33554432
+
+spring.kafka.streams.properties.spring.json.value.default.type=com.kotsin.consumer.model.TickData
