--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,10 +28,10 @@ spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer
 spring.kafka.streams.properties.auto.offset.reset=earliest
 
 # CRITICAL FIX: Use unique state directory path with application name and instance ID
-spring.kafka.streams.state-dir=/var/lib/kafka-streams/${spring.application.name}
+spring.kafka.streams.state-dir=/home/ubuntu/kstreams/${spring.application.name}
+spring.kafka.streams.properties.processing.guarantee=at_least_once
 
 # Production reliability configurations
-spring.kafka.streams.properties.processing.guarantee=exactly_once_v2
 spring.kafka.streams.properties.commit.interval.ms=100
 spring.kafka.streams.properties.statestore.cache.max.bytes=10485760
 spring.kafka.streams.properties.session.timeout.ms=30000
