--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=consumer
-
+server.port=8081
 # MongoDB Configuration
 spring.data.mongodb.uri=mongodb://devina:devina4@172.31.12.118:27017/tradeIngestion?authSource=admin
 spring.data.mongodb.auto-index-creation=true
