--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=consumer
 server.port=8081
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://devina:devina4@172.31.12.118:27017/tradeIngestion?authSource=admin
+spring.data.mongodb.uri=mongodb://localhost:27017/tradeIngestion
 spring.data.mongodb.auto-index-creation=true
 
 # Kafka Configuration for historical data
-spring.kafka.bootstrap-servers=172.31.12.118:9092
+spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.consumer.auto-offset-reset=earliest
 
 # FIXED: Add missing consumer deserializer configuration
@@ -20,7 +20,7 @@ spring.kafka.producer.value-serializer=org.springframework.kafka.support.seriali
 
 # Kafka Streams Configuration - PRODUCTION FIXES
 spring.kafka.streams.application-id=candle-processor-ticktooneminprocessor
-spring.kafka.streams.bootstrap-servers=172.31.12.118:9092
+spring.kafka.streams.bootstrap-servers=localhost:9092
 spring.kafka.streams.client-id=streamingcandle
 spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
 spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.support.serializer.JsonSerde
