--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -46,3 +46,53 @@ spring.kafka.streams.properties.batch.size=1024
 spring.kafka.streams.properties.buffer.memory=33554432
 
 spring.kafka.streams.properties.spring.json.value.default.type=com.kotsin.consumer.model.TickData
+
+# ============================================================================
+# INFORMATION-DRIVEN BARS CONFIGURATION
+# Based on "Advances in Financial Machine Learning" Chapter 2
+# ============================================================================
+
+# Enable information bars (VIB, DIB, TRB, VRB)
+# CRITICAL: Multi-threshold approach (like 1min, 2min, 5min for time bars)
+information.bars.enabled=true
+
+# Threshold multipliers (like 1min, 2min, 5min for time bars)
+# 1x = sensitive (high frequency), 2x = medium, 5x = stable (low frequency)
+information.bars.thresholds=1.0,2.0,5.0
+
+# VIB - Volume Imbalance Bars
+information.bars.vib.enabled=true
+information.bars.vib.min.ticks=10
+information.bars.vib.warmup.samples=20
+
+# DIB - Dollar Imbalance Bars  
+information.bars.dib.enabled=true
+information.bars.dib.min.ticks=10
+information.bars.dib.warmup.samples=20
+
+# TRB - Tick Runs Bars
+information.bars.trb.enabled=true
+information.bars.trb.min.ticks=10
+information.bars.trb.warmup.samples=20
+
+# VRB - Volume Runs Bars
+information.bars.vrb.enabled=true
+information.bars.vrb.min.ticks=10
+information.bars.vrb.warmup.samples=20
+
+# EWMA parameters for expected imbalance/run calculation
+information.bars.ewma.span=100.0
+
+# CRITICAL FIX: Added missing configuration (no more hardcoded values)
+# Minimum expected volume (prevents division by zero, used during warmup)
+information.bars.min.expected.volume=100.0
+
+# Expected bar size for runs bars (TRB/VRB)
+information.bars.expected.bar.size=50.0
+
+# Kafka topics for information bars
+information.bars.input.topic=forwardtesting-data
+information.bars.vib.output.topic=volume-imbalance-bars
+information.bars.dib.output.topic=dollar-imbalance-bars
+information.bars.trb.output.topic=tick-runs-bars
+information.bars.vrb.output.topic=volume-runs-bars
