--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -85,6 +85,16 @@ information.bars.vrb.enabled=true
 information.bars.vrb.min.ticks=10
 information.bars.vrb.warmup.samples=20
 
+# ============================================================================
+# MICROSTRUCTURE FEATURES CONFIGURATION
+# ============================================================================
+microstructure.enabled=true
+microstructure.input.topic=Orderbook
+microstructure.output.topic=microstructure-features
+microstructure.window.size=50
+microstructure.min.observations=20
+microstructure.emit.interval.ms=1000
+
 # EWMA parameters
 information.bars.ewma.span=100.0
 
