--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -84,6 +84,27 @@ information.bars.vrb.warmup.samples=20
 information.bars.ewma.span=100.0
 
 # CRITICAL FIX: Added missing configuration (no more hardcoded values)
+
+# ============================================================================
+# MICROSTRUCTURE FEATURES CONFIGURATION
+# Based on "Advances in Financial Machine Learning" Chapter 19
+# ============================================================================
+
+# Enable microstructure feature calculation
+microstructure.enabled=true
+
+# Kafka topics
+microstructure.input.topic=Orderbook
+microstructure.output.topic=microstructure-features
+
+# Rolling window configuration
+microstructure.window.size=50
+microstructure.min.observations=20
+
+# Emission strategy
+# How often to emit features (milliseconds)
+# 1000 = 1 second, 5000 = 5 seconds, 10000 = 10 seconds
+microstructure.emit.interval.ms=1000
 # Minimum expected volume (prevents division by zero, used during warmup)
 information.bars.min.expected.volume=100.0
 
