--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -136,8 +136,8 @@ microstructure.enabled=true
 # INPUT: Production Orderbook topic
 microstructure.input.topic=Orderbook
 
-# OUTPUT: Test topic
-microstructure.output.topic=microstructure-features-test
+# OUTPUT: Test topic (aligned with indicatorCalculator)
+microstructure.output.topic=microstructure-features-friday
 
 # Configuration
 microstructure.window.size=50
