--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -117,3 +117,31 @@ information.bars.vib.output.topic=volume-imbalance-bars
 information.bars.dib.output.topic=dollar-imbalance-bars
 information.bars.trb.output.topic=tick-runs-bars
 information.bars.vrb.output.topic=volume-runs-bars
+
+# Information bars application ID prefix (for unique consumer groups per deployment)
+information.bars.app.id.prefix=information-bars
+
+# ============================================================================
+# CANDLESTICK OUTPUT TOPICS (Time-based bars)
+# ============================================================================
+candle.input.topic=forwardtesting-data
+candle.output.topic.1min=1-min-candle
+candle.output.topic.2min=2-min-candle
+candle.output.topic.3min=3-min-candle
+candle.output.topic.5min=5-min-candle
+candle.output.topic.15min=15-min-candle
+candle.output.topic.30min=30-min-candle
+
+# ============================================================================
+# OPEN INTEREST CONFIGURATION (Position-based signals)
+# ============================================================================
+openinterest.enabled=true
+openinterest.input.topic=OpenInterest
+
+# OI output topics (multiple timeframes like candles)
+openinterest.output.topic.1min=1-min-oi
+openinterest.output.topic.2min=2-min-oi
+openinterest.output.topic.3min=3-min-oi
+openinterest.output.topic.5min=5-min-oi
+openinterest.output.topic.15min=15-min-oi
+openinterest.output.topic.30min=30-min-oi
