--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+# DEFAULT PROFILE = PRODUCTION (use -Dspring-boot.run.profiles=test to override)
+spring.profiles.active=production
+
 spring.application.name=consumer
 server.port=8081
 # MongoDB Configuration
