--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,7 +36,8 @@ spring.kafka.streams.properties.auto.offset.reset=earliest
 
 # CRITICAL FIX: Use unique state directory path with application name and instance ID
 spring.kafka.streams.state-dir=/home/ubuntu/kstreams/${spring.application.name}
-spring.kafka.streams.properties.processing.guarantee=exactly_once_v2
+# FIXED: at_least_once for single-broker (exactly_once_v2 needs replication ≥ 3)
+spring.kafka.streams.properties.processing.guarantee=at_least_once
 
 # Production reliability configurations
 spring.kafka.streams.properties.commit.interval.ms=100
