--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.data.mongodb.uri=mongodb://localhost:27017/tradeIngestion
 spring.data.mongodb.auto-index-creation=true
 
 # Kafka Configuration for historical data
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=13.203.60.173:9094
 spring.kafka.consumer.auto-offset-reset=earliest
 
 # FIXED: Add missing consumer deserializer configuration
@@ -27,7 +27,7 @@ spring.kafka.producer.properties.spring.json.add.type.headers=false
 
 # Kafka Streams Configuration - PRODUCTION FIXES
 spring.kafka.streams.application-id=candle-processor-ticktooneminprocessor
-spring.kafka.streams.bootstrap-servers=localhost:9092
+spring.kafka.streams.bootstrap-servers=13.203.60.173:9094
 spring.kafka.streams.client-id=streamingcandle
 spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
 spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.support.serializer.JsonSerde
@@ -153,3 +153,44 @@ openinterest.output.topic.3min=3-min-oi
 openinterest.output.topic.5min=5-min-oi
 openinterest.output.topic.15min=15-min-oi
 openinterest.output.topic.30min=30-min-oi
+
+# ============================================================================
+# INSTRUMENT FAMILY CACHE CONFIGURATION
+# ============================================================================
+
+# ScripFinder API configuration
+instrument.api.base.url=http://13.203.60.173:8102
+
+# Cache configuration
+instrument.cache.refresh.cron=0 0 3 * * ?
+instrument.cache.parallel.threads=10
+
+# Redis configuration for instrument cache
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.timeout=3000ms
+spring.data.redis.lettuce.pool.max-active=8
+spring.data.redis.lettuce.pool.max-idle=8
+spring.data.redis.lettuce.pool.min-idle=2
+spring.data.redis.lettuce.pool.max-wait=-1ms
+
+# ============================================================================
+# UNIFIED MARKET DATA PROCESSOR CONFIGURATION
+# ============================================================================
+
+# Unified processor settings
+unified.input.topic.ticks=forwardtesting-data
+unified.input.topic.oi=OpenInterest
+unified.input.topic.orderbook=Orderbook
+unified.output.topic=enriched-market-data
+
+# Kafka Streams application ID for unified processor
+spring.kafka.streams.application-id=unified-market-processor
+
+# Window configuration
+unified.window.size.minutes=30
+unified.window.grace.seconds=10
+
+# Processing settings
+unified.processing.batch.size=1000
+unified.processing.linger.ms=100
