--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.profiles.active=production
 spring.application.name=consumer
 server.port=8081
 # MongoDB Configuration
-spring.data.mongodb.uri=mongodb://localhost:27017/scripFinder
+spring.data.mongodb.uri=mongodb://localhost:27017/tradeIngestion
 spring.data.mongodb.auto-index-creation=true
 
 # Kafka Configuration for historical data
