--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -40,7 +40,7 @@ spring.kafka.producer.properties.spring.json.add.type.headers=false
 # KAFKA STREAMS CONFIGURATION - PRODUCTION
 # ============================================================================
 spring.kafka.streams.application-id=production-streamingcandle
-spring.kafka.streams.bootstrap-servers=13.203.60.173:9094
+spring.kafka.streams.bootstrap-servers=localhost:9092
 spring.kafka.streams.client-id=streamingcandle-prod
 spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
 spring.kafka.streams.properties.default.value.serde=org.springframework.kafka.support.serializer.JsonSerde
@@ -164,3 +164,4 @@ spring.task.execution.pool.queue-capacity=100
 # -Xms2g -Xmx4g -XX:+UseG1GC -XX:MaxGCPauseMillis=20
 # -XX:+UseStringDeduplication -XX:+ParallelRefProcEnabled
 
+spring.kafka.streams.application-id=unified-market-processor1
