--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,5 +60,25 @@ unified.input.topic.ticks=forwardtesting-data
 unified.input.topic.oi=OpenInterest
 unified.input.topic.orderbook=Orderbook
 
-# Output topic (single enriched topic with all data)
+# Output topics
 unified.output.topic=enriched-market-data
+
+# ============================================================================
+# DUAL EMISSION STRATEGY (Feature Flags)
+# ============================================================================
+# Enable enriched stream (partial updates every window, family-grouped)
+stream.outputs.enriched.enabled=true
+
+# Enable finalized candle emission (only on window close)
+stream.outputs.candles.enabled=true
+
+# Finalized candle topics (one per timeframe)
+stream.outputs.candles.1m=candle-complete-1m
+stream.outputs.candles.2m=candle-complete-2m
+stream.outputs.candles.3m=candle-complete-3m
+stream.outputs.candles.5m=candle-complete-5m
+stream.outputs.candles.15m=candle-complete-15m
+stream.outputs.candles.30m=candle-complete-30m
+
+# Optional: Enable additional candle fields (vwap, hlc3, logReturn, etc.)
+stream.outputs.candles.include-extras=false
