--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,16 +41,7 @@ spring.kafka.streams.properties.linger.ms=5
 spring.kafka.streams.properties.batch.size=1024
 spring.kafka.streams.properties.buffer.memory=33554432
 
-# ============================================================================
-# REDIS CONFIGURATION (for instrument family cache)
-# ============================================================================
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
-spring.data.redis.timeout=3000ms
-spring.data.redis.lettuce.pool.max-active=8
-spring.data.redis.lettuce.pool.max-idle=8
-spring.data.redis.lettuce.pool.min-idle=2
-spring.data.redis.lettuce.pool.max-wait=-1ms
+# Redis removed: in-memory cache only
 
 # ============================================================================
 # UNIFIED MARKET DATA PROCESSOR CONFIGURATION
