--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,10 +13,10 @@ spring.data.mongodb.auto-index-creation=true
 # ============================================================================
 # KAFKA STREAMS CONFIGURATION
 # ============================================================================
-spring.kafka.bootstrap-servers=13.203.60.173:9094
+spring.kafka.bootstrap-servers=localhost:9092
 spring.kafka.streams.application-id=unified-market-processor1
 spring.kafka.streams.client-id=streamingcandle
-spring.kafka.streams.state-dir=/home/ubuntu/kstreams/${spring.application.name}
+spring.kafka.streams.state-dir=/tmp/kafka-streams/${spring.application.name}
 
 # Serdes
 spring.kafka.streams.properties.default.key.serde=org.apache.kafka.common.serialization.Serdes$StringSerde
@@ -26,12 +26,13 @@ spring.kafka.streams.properties.spring.json.trusted.packages=com.kotsin.consumer
 # Offset reset - consume from earliest
 spring.kafka.streams.properties.auto.offset.reset=earliest
 
-# Processing guarantee
+# Processing guarantee (at_least_once or exactly_once_v2)
 spring.kafka.streams.properties.processing.guarantee=at_least_once
 
 # Performance tuning
 spring.kafka.streams.properties.commit.interval.ms=100
-spring.kafka.streams.properties.statestore.cache.max.bytes=10485760
+spring.kafka.streams.properties.statestore.cache.max.bytes=104857600
+spring.kafka.streams.properties.num.stream.threads=2
 spring.kafka.streams.properties.session.timeout.ms=30000
 spring.kafka.streams.properties.heartbeat.interval.ms=3000
 spring.kafka.streams.properties.request.timeout.ms=40000
@@ -40,6 +41,15 @@ spring.kafka.streams.properties.reconnect.backoff.ms=50
 spring.kafka.streams.properties.linger.ms=5
 spring.kafka.streams.properties.batch.size=1024
 spring.kafka.streams.properties.buffer.memory=33554432
+
+# Topology optimization
+spring.kafka.streams.properties.topology.optimization=all
+
+# Deserialization exception handler
+spring.kafka.streams.properties.default.deserialization.exception.handler=org.apache.kafka.streams.errors.LogAndContinueExceptionHandler
+
+# Producer timestamp type
+spring.kafka.streams.properties.producer.message.timestamp.type=CreateTime
 
 # Redis removed: in-memory cache only
 
