--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -68,8 +68,8 @@ unified.output.topic=enriched-market-data
 # DUAL EMISSION STRATEGY (Feature Flags)
 # ============================================================================
 # Enable enriched stream (partial updates every window, family-grouped)
-# DEPRECATED: Disable enriched output; use finalized candle topics instead
-stream.outputs.enriched.enabled=false
+# ENABLED: Family-level aggregation with individual candles for each instrument
+stream.outputs.enriched.enabled=true
 
 # Enable finalized candle emission (only on window close)
 stream.outputs.candles.enabled=true
