--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,20 +61,8 @@ unified.input.topic.ticks=forwardtesting-data
 unified.input.topic.oi=OpenInterest
 unified.input.topic.orderbook=Orderbook
 
-# Output topics
-unified.output.topic=enriched-market-data
-
-# ============================================================================
-# DUAL EMISSION STRATEGY (Feature Flags)
-# ============================================================================
-# Enable enriched stream (partial updates every window, family-grouped)
-# ENABLED: Family-level aggregation with individual candles for each instrument
-stream.outputs.enriched.enabled=true
-
-# Enable finalized candle emission (only on window close)
+# Finalized candle topics
 stream.outputs.candles.enabled=true
-
-# Finalized candle topics (one per timeframe)
 stream.outputs.candles.1m=candle-complete-1m
 stream.outputs.candles.2m=candle-complete-2m
 stream.outputs.candles.3m=candle-complete-3m
@@ -82,5 +70,11 @@ stream.outputs.candles.5m=candle-complete-5m
 stream.outputs.candles.15m=candle-complete-15m
 stream.outputs.candles.30m=candle-complete-30m
 
-# Optional: Enable additional candle fields (vwap, hlc3, logReturn, etc.)
-stream.outputs.candles.include-extras=false
+# Family-structured snapshot streams (enabled by default)
+stream.outputs.familyStructured.enabled=true
+stream.outputs.familyStructured.1m=family-structured-1m
+stream.outputs.familyStructured.2m=family-structured-2m
+stream.outputs.familyStructured.5m=family-structured-5m
+
+# Family-structured ALL
+stream.outputs.familyStructured.all=family-structured-all
