fixed working code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -75,6 +75,8 @@ stream.outputs.familyStructured.enabled=true
 stream.outputs.familyStructured.1m=family-structured-1m
 stream.outputs.familyStructured.2m=family-structured-2m
 stream.outputs.familyStructured.5m=family-structured-5m
+stream.outputs.familyStructured.15m=family-structured-15m
+stream.outputs.familyStructured.30m=family-structured-30m
 
 # Family-structured ALL
 stream.outputs.familyStructured.all=family-structured-all
