--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -68,7 +68,7 @@ stream.outputs.candles.2m=candle-complete-2m
 stream.outputs.candles.3m=candle-complete-3m
 stream.outputs.candles.5m=candle-complete-5m
 stream.outputs.candles.15m=candle-complete-15m
-stream.outputs.candles.30m=candle-complete-30m
+stream.outputs.candles.30m=candle-complete-30m-v2
 
 # Family-structured snapshot streams (enabled by default)
 stream.outputs.familyStructured.enabled=true
